finish with the project

--- a/Pipfile
+++ b/Pipfile
@@ -16,12 +16,12 @@ colorama = "==0.4.6"
 cssbeautifier = "==1.14.7"
 curlylint = "==0.13.1"
 django = "==3.2.4"
-django-cors-headers = "==3.7.0"
+django-cors-headers = "*"
 django-storages = "==1.11.1"
 django-stubs = "==1.12.0"
 django-stubs-ext = "==0.5.0"
-djangorestframework = "==3.12.4"
-djangorestframework-simplejwt = "==4.7.2"
+djangorestframework = "*"
+djangorestframework-simplejwt = "*"
 djhtml = "==1.5.2"
 djlint = "==1.19.7"
 editorconfig = "==0.12.3"
